--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,18 +6,25 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: [ '3.7', '3.8' ]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 2.7
+
+    - name: Set up Python ${{ matrix.python }}
       uses: actions/setup-python@v1
       with:
-        python-version: 2.7
+        python-version: ${{ matrix.python }}
+        architecture: x64
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e .
         pip install -e ".[tests]"
+
     - name: Test with pytest
       run: |
         pytest
